# gropro-healthcare

./: .replit  pyproject.toml  replit.md
app/: main.py
app/ai_agents/: capital_allocation_ai.py  company_rules.py  document_extractor.py  fic_optimizer.py  investment_advisor_ai.py  pension_ai.py  pension_rules.py  scenario_ai.py  tax_rules.py
app/models/: models.py
app/routes/: auth.py  dashboard.py  documents.py  fic.py  investments.py  marketplace.py  onboarding.py
app/static/: main.js  style.css
app/templates/: dashboard.html  documents.html  fic.html  home.html  investments.html  login.html  marketplace.html  onboarding.html  register.html
app/utils/: charts.py  constants.py  data_import.py
attached_assets/: Pasted-this-is-the-correct-architectural-direction-We-will-des_1772751929910.txt  Pasted-we-ll-generate-the-full-production-ready-MVP-code-for-G_1772746001319.txt  auth_1772746926383.py  capital_allocation_ai_1772746926379.py  charts_1772746926385.py  constants_1772746926385.py  dashboard_1772746926383.py  data_import_1772746926386.py  fic_1772746926384.py  fic_optimizer_1772746926380.py  financial_mri_1772746926380.py  home_1772746994272.html  investments_1772746926384.py  main_1772746926382.py  pension_ai_1772746926381.py  scenario_ai_1772746926381.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: app-sidebar.tsx
client/src/lib/: theme-provider.tsx
client/src/pages/: advisors.tsx  dashboard.tsx  fics.tsx  home.tsx  investments.tsx  (+2 more)
server/: ai-agents.ts  routes.ts  seed.ts  storage.ts
shared/: schema.ts
